<resources>
    <string name="app_name">DrApp</string>
    <string name="emailEt">Email</string>
    <string name="passwordEt">Senha</string>
    <string name="passwordConfirmationEt">Confirmação de Senha</string>
    <string name="entrarBtn">ENTRAR</string>
    <string name="pacienteCadastroTv"><u>Quero me cadastrar como paciente</u></string>
    <string name="medicoCadastroTv"><u>Sou médico e quero me cadastrar</u></string>
    <string name="titleCadastroPaciente">Cadastro de Paciente</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="titleCadastroMedico">Cadastro de Médico</string>
    <string name="especialidade">Especialidade</string>
    <string name="title_activity_doctor_main">DoctorMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_patient_main">PatientMain</string>
    <string name="semPacientes">Você ainda não possui pacientes</string>
</resources>