<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientSignup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="288dp">

        <TextView
            android:id="@+id/titleCadastroPaciente"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleCadastroPaciente" />

        <EditText
            android:id="@+id/etNomePaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nome" />

        <EditText
            android:id="@+id/etEmailPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/emailEt"/>

        <EditText
            android:id="@+id/etSenhaCadastroPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordEt" />

        <EditText
            android:id="@+id/etConfirmarSenhaCadastroPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordConfirmationEt" />

        <Button
            android:id="@+id/btnCadastrarPaciente"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/cadastrar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>