<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="86dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailEt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordEt"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/entrarBtn"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/pacienteCadastroTv"
            style="@style/LinkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pacienteCadastroTv" />

        <TextView
            android:id="@+id/medicoCadastroTv"
            style="@style/LinkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicoCadastroTv" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>